--- a/clab21/attempt1.clab.yml
+++ b/clab21/attempt1.clab.yml
@@ -6,7 +6,7 @@ topology:
   nodes:
     srl:
       kind: nokia_srlinux
-      image: ghrc.io/nokia/srlinux:24.10
+      image: ghcr.io/nokia/srlinux:24.10
     ceos:
       kind: arista_ceos
       image: ceos:4.34.1F
