--- a/clab21/attempt1.clab.yml
+++ b/clab21/attempt1.clab.yml
@@ -9,7 +9,7 @@ topology:
       image: ghcr.io/nokia/srlinux:24.10
     ceos:
       kind: arista_ceos
-      image: ceos:4.34.1F
+      image: arista/ceos:4.34.1F
   
   links: 
     - endpoints: ["srl:ethernet-1/1", "ceos:eth1"]
